--- a/public/lose.html
+++ b/public/lose.html
@@ -4,6 +4,7 @@
         <title>You Lose...</title>
         <!--import style sheet-->
         <link href="index.css" rel="stylesheet">
+        <script src="lose.js" defer></script>
     </head>
     <body>
         <div id="result">
