--- a/public/registration.html
+++ b/public/registration.html
@@ -16,6 +16,7 @@
             <div>
                 <label for="password">Password:</label>
                 <input type="password" name="password" id="password" placeholder="password">
+                <p id = "passwordWarning"></p>
             </div>
             <div>
                 <label for="confirm_password">Confirm Password:</label>
