--- a/public/lose.html
+++ b/public/lose.html
@@ -3,7 +3,7 @@
     <head>
         <title>You Lose...</title>
         <!--import style sheet-->
-        <link href="index.css" rel="stylesheet">
+        <link href="win.css" rel="stylesheet">
         <script src="lose.js" defer></script>
     </head>
     <body>
