--- a/public/win.html
+++ b/public/win.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>You Win!</title>
         <!--import style sheet-->
-        <link href="index.css" rel="stylesheet">
+        <link href="win.css" rel="stylesheet">
         <script src="win.js" defer></script>
     </head>
     <body>
