--- a/public/history.html
+++ b/public/history.html
@@ -3,14 +3,21 @@
     <head>
         <title>Result</title>
         <!--import style sheet-->
-        <link href="index.css" rel="stylesheet">
+        <link href="history.css" rel="stylesheet">
+        <script src="history.js" defer></script>
     </head>
     <body>
-        <div id="history">
-            <p>my history, cards, solution</p>
+        <div id="title">
+            <p>My history</p>
         </div>
         <div id="jumpMain">
-            <p><a href="main">Main Page</a></p>
+            <p><a href="main">Play again</a></p>
+        </div>
+        <div>
+            <p><button type="button" id="getHistory">Get my history</a></p>
+        </div>
+        <div>
+            <p id="myHistory"></p>
         </div>
         
     </body>
