--- a/public/lose.html
+++ b/public/lose.html
@@ -17,7 +17,7 @@
             <p><a href="main">Main Page</a></p>
         </div>
         <div id="jumpHistory">
-            <p><a href="history">History Page</a></p>
+            <p><a href="history.html">History Page</a></p>
         </div>
         
     </body>
