--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <form method="POST" action="/attempt_login">
+            <p id="title">Please login</p>
             <div class="login">
                 <label for="inp" class="inp">
                     <input type="textarea" name="username" id="username" placeholder="&nbsp;" size = 50>
