--- a/public/main.html
+++ b/public/main.html
@@ -9,6 +9,10 @@
     <body>
         <div class = "welcome-title"><p>Welcome to 24 points!</p>
         </div>
+        <nav>
+            <a href ="index.html">Log Out</a>
+            <a href ="history.html">View my history</a>
+        </nav>
         <div class = "all-cards">
             <div class = "flip-card">
                 <div class = "flip-card-inner">
